# online-gpslam-code

./: CMakeLists.txt  README.md
cpp/: BearingRangeFactorLV.h  CMakeLists.txt  GaussianProcessPriorPose2.h  InterpolatedRangeFactor.h  InterpolatedVFactor.h  RangeFactorLV.h  VFactor.h  gpslam.h
matlab/Data/: Plaza1_full_data_run.mat  Plaza1_thrown_away_some_range.mat  Syn_full_data_run.mat  Syn_theta_Plaza.mat  new_victoria_park.txt  victoria_park_deadreckoning.mat  victoria_park_full_data_run.mat
matlab/GP/: bench1.m  bench1_plot.m  bench2.m  bench2_plot.m  calc_Phi.m  calc_Q.m  calc_Q_inv.m  final_plot.m  loop_plot.m  plaza_isam2.m  plaza_periodic.m  plaza_plot.m  plot2d.m  plot_ellipse.m  range_measure_fit.m  synthetic_isam2.m  synthetic_isam2.m~  synthetic_periodic.m  synthetic_plot.m  victoria_park_isam2.m  victoria_park_plot.m
